@@ -6,7 +6,6 @@ tetex/texdoctk.pl
 texdoc/texdoc.tlu
 texlive/rungs.tlu
 texlive/tlmgr.pl
-texlive/updmap.pl
 '
 texmf_dist_scripts='
 bibexport/bibexport.sh
