@@ -1,6 +1,11 @@
+2012-04-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* tests/ (removed): Moved from here to ../tetex/.
+	* Makefile.am: Adapted.
+
 2012-04-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
-	* tests/ (new): Moved from ../texlive/ to here and adapted.
+	* tests/ (new): Moved from ../tetex/ to here and adapted.
 	* Makefile.am: Adapted.
 
 2011-09-10  Reinhard Kotucha  <reinhard.kotucha@web.de>
