@@ -1,3 +1,10 @@
+2012-04-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* updmap.pl: Moved from  ../texlive/linked_scripts/texlive/
+	back to here.
+	* tests/ (new): Moved from ../texlive/ to here and adapted.
+	* Makefile.am: Adapted.
+
 2012-04-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* tests/ (removed): Moved from here to ../texlive/.
